<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nickname.gsblaboratoire.laboratoiregsb.ChoixActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView3"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ch_titre"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_btnlistepraticiens"
        android:id="@+id/btnlistepraticiens"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="44dp"
        android:layout_alignLeft="@+id/btnlistemedicaments"
        android:layout_alignStart="@+id/btnlistemedicaments"
        android:layout_alignRight="@+id/btnlistemedicaments"
        android:layout_alignEnd="@+id/btnlistemedicaments" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_btnlistemedicaments"
        android:id="@+id/btnlistemedicaments"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_btnlistevisiteurs"
        android:id="@+id/btnlistevisiteurs"
        android:layout_below="@+id/btnlistemedicaments"
        android:layout_alignRight="@+id/btnlistemedicaments"
        android:layout_alignEnd="@+id/btnlistemedicaments"
        android:layout_alignLeft="@+id/btnlistemedicaments"
        android:layout_alignStart="@+id/btnlistemedicaments" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_btnlistepatients"
        android:id="@+id/btnlistepatients"
        android:layout_below="@+id/btnlistevisiteurs"
        android:layout_alignRight="@+id/btnlistevisiteurs"
        android:layout_alignEnd="@+id/btnlistevisiteurs"
        android:layout_alignLeft="@+id/btnlistevisiteurs"
        android:layout_alignStart="@+id/btnlistevisiteurs" />

</RelativeLayout>
